--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <meta name="msapplication-TileImage" content="https://oscarmmi.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
     <meta name="msapplication-config" content="https://oscarmmi.github.io/images/browserconfig.xml?v=M44lzPylqQ">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./Arun Jacob’s Personal Website - Arun Jacob_files/academicons.css">        
+    <link rel="stylesheet" href="https://oscarmmi.github.io/css/academicons.css">        
   </head>
   <body>
     <div class="masthead">
