--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </script>
     <!-- For all browsers -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0-1/css/all.min.css" integrity="sha512-xEGx3E22YcUzfX525T3KV7SqNexb09E2CckB6lBB/dT930VlbSX9JnQlLiogtSLAl9yGAJGKDu7O1ZanrqljGg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./Arun Jacob’s Personal Website - Arun Jacob_files/main.css">
+    <link rel="stylesheet" href="https://oscarmmi.github.io/css/main.css">
     <meta http-equiv="cleartype" content="on">
     <!-- start custom head snippets -->
     <link rel="apple-touch-icon" sizes="57x57" href="https://oscarmmi.github.io/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
