--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       }
     </script>
     <!-- end SEO -->
-    <link href="https://oscarmmi.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="Arun Jacob Feed">
+    <link href="https://oscarmmi.github.io/feed.xml" type="application/atom+xml" rel="alternate">
     <!-- http://t.co/dKP3o1e -->
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
