--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <p><img src="https://komarev.com/ghpvc/?username=oscarmmi&color=brightgreen" alt=""></p>
             <p>
               I am a systems engineer, a web developer for 6 years and a bilingual (Spanish/English) speaker. 
-              I have worked in six different companies, and currently I am working in a full-time job for a US based company name <a href="https://www.linkedin.com/in/oscar-javier-mu%C3%B1oz/"  target="_blank" rel="nofollow"></a>DevBase, 
+              I have worked in six different companies, and currently I am working in a full-time job for a US based company name <a href="https://www.linkedin.com/company/mydevbase/mycompany/"  target="_blank" rel="nofollow">DevBase</a>, 
               in which I work in the backend side where I have to create different endpoints, jobs and many other features to be added in the project I belong.
             </p>
             <ul dir="auto">
